# IAVideo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/ryan/media/iavideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFMedia.c  FFMedia.cpp  IAVideoPlayer_jni.cpp  native-lib.cpp
app/src/main/cpp/jni/: IAVideoPlayer_jni_class.cpp  IAVideoPlayer_jni_class.h
app/src/main/cpp/media/codec/: android_log.h  extractAudio.c  extractAudio.h  ffCodec.c  ffCodec.cpp  ffCodec.h
app/src/main/cpp/media/player/: IAVideoPlayer.cpp
app/src/main/cpp/util/: LogUtils.h
app/src/main/java/ryan/media/capability/: Capability.java  CapabilityAdapter.java  CapabilityListActivity.java  SpacesItemDecoration.java
app/src/main/java/ryan/media/iavideo/: IAVideoCodec.java  IAVideoPlayer.java  IAVideoView.java  IjkVideoDemoActivity.java  MainActivity.java  VideoPlayer.java
app/src/main/java/ryan/media/info/: GetMediaInfoActivity.java
app/src/main/java/ryan/utils/: Constant.java  FileUtils.java  OpenAlbumActivity.java  PermissionUtil.java  PermissionUtils.kt
app/src/main/res/layout/: activity_main.xml  capability_item.xml  capability_list.xml  ijk_video_demo.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ryan/media/iavideo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
